--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 pycron --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 cronpy/ --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
-        flake8 pycron --count --exit-zero --max-complexity=20 --max-line-length=120 --statistics
+        flake8 cronpy/ --count --exit-zero --max-complexity=20 --max-line-length=120 --statistics
     - name: Test with Pytest
       run: |
         pytest -sv --flake8 --cov-report term-missing --junit-xml=nosetests-ut.xml --cov=. --cov-branch --cov-report=xml:coverage-ut.xml tests/
