--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,10 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=20 --max-line-length=120 --statistics
+        flake8 . --count --max-complexity=20 --max-line-length=120 --statistics
     - name: Test with Pytest
       run: |
-        pytest -sv --flake8 --cov-report term-missing --junit-xml=nosetests-ut.xml --cov=. --cov-branch --cov-report=xml:coverage-ut.xml tests/
+        python -m pytest -vv --flake8 --cov-report term-missing --junit-xml=nosetests-ut.xml --cov=. --cov-branch --cov-report=xml:coverage-ut.xml tests/
     # - name: Coveralls
     #   uses: AndreMiras/coveralls-python-action@develop
     #   with:
